[gd_scene load_steps=7 format=3 uid="uid://c302tnsgbff3x"]

[ext_resource type="Script" path="res://obiekty/szafka/szafka.gd" id="1_3fv8o"]
[ext_resource type="TileSet" uid="uid://bs8c7gnpc1lyi" path="res://rysunki/zbiórPłyt/magazyn1/magazyn1.tres" id="2_1qwv4"]
[ext_resource type="Texture2D" uid="uid://bg5hjmsxpfup8" path="res://rysunki/pomocnicze/naciśnijE.png" id="3_bjqo4"]
[ext_resource type="FontFile" uid="uid://b01nhi7csnkl8" path="res://Judical.ttf" id="4_ub444"]
[ext_resource type="Texture2D" uid="uid://dy7x5e4ukamr2" path="res://rysunki/postacie/boskiSędzia/oczy.png" id="5_8avr8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aaquq"]
size = Vector2(64, 64)

[node name="szafka" type="Node2D"]
script = ExtResource("1_3fv8o")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_1qwv4")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65536, 5)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_aaquq")

[node name="NaciśnijE" type="Sprite2D" parent="."]
position = Vector2(12, -13)
texture = ExtResource("3_bjqo4")

[node name="Label" type="Label" parent="NaciśnijE"]
offset_left = 10.0
offset_top = -5.0
offset_right = 52.0
offset_bottom = 13.0
theme_override_fonts/font = ExtResource("4_ub444")
theme_override_font_sizes/font_size = 8
text = "WEJDŹ"
metadata/_edit_use_anchors_ = true

[node name="Oczy" type="Sprite2D" parent="."]
position = Vector2(32, 9)
texture = ExtResource("5_8avr8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
